[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knvectis"
version = "0.1.0"
description = "A modular traversal and knowledge execution engine for structured object hierarchies."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "GliTCH" }
]

keywords = [
    "knowledge-graph",
    "traversal",
    "tree-structure",
    "graph-engine",
    "semantic-engine",
    "ai-architecture"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["knvectis*"]

[project.urls]
Homepage = "https://berithjeshurun.github.io/"
Repository = "https://github.com/berithjeshurun/knvectis"
Issues = "https://github.com/berithjeshurun/knvectis/issues"